# CubeHub-Launcher

./: .editorconfig  .gitignore  LICENSE  README.md  TODO.md  index.html  package-lock.json  package.json  tauri.conf.json  tsconfig.json  vite.config.js  vite.config.ts
src/: App.vue  main.rs  main.ts  router.js  router.ts  shims-vue.d.ts  tauri.conf.json
src-tauri/: Cargo.toml  tauri.conf.json  tauri.conf.json.bak
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src/assets/: main.css
src/components/: BackButton.vue  ConfirmDialog.vue  ContextMenu.vue  CustomSlider.vue  DownloadProgress.vue  LoginSelector.vue  MicrosoftLoginForm.vue  Modal.vue  Notification.vue  OfflineLoginForm.vue  TitleBar.vue  VersionItem.vue  VersionSelectModal.vue
src/composables/: useWindowSize.ts
src/download/: VersionDetail.vue  VersionList.vue  VersionMore.vue  VersionPreview.vue
src/router/: index.js  index.ts
src/services/: LaunchConfigGenerator.ts  VersionManager.ts  accountService.ts  downloadManager.js  downloadManager.ts
src/stores/: account.ts
src/types/: index.ts
src/utils/: config.js  downloader.js  gameDir.js  microsoftAuth.js  skinUtils.ts  theme.js  themeManager.js
src/views/: Download.vue  Home.vue  Launch.vue  OAuthRedirect.vue  Settings.vue  VersionMore.vue
src/views/Start/: Agreement.vue  Complete.vue  GamePath.vue  JavaSettings.vue  Login.vue
src/views/download/: LoaderVersionDialog.vue  VersionDetail.vue  VersionList.vue  VersionPreview.vue
